# personal-finance-api

./: .dockerignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/models/: transaction_list_response.py  transaction_response.py
app/api/routes/: transaction_api.py
app/common/: base_entity.py
app/infra/: database.py  dependencies.py  transaction_repository.py
app/infra/models/: transaction_model.py
app/transactions/: i_transaction_repository.py  transaction.py
app/transactions/create/: create_transaction_command.py  create_transaction_command_handler.py
app/transactions/delete/: delete_transaction_command.py  delete_transaction_command_handler.py
app/transactions/get/: get_transaction_query.py  get_transaction_query_handler.py  get_transactions_query.py  get_transactions_query_handler.py
app/transactions/get_by_id/: get_transaction_by_id_query.py  get_transaction_by_id_query_handler.py
app/transactions/update/: update_command.py  update_command_handler.py
src/financial_manager/: main.py
